2007-12-10  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DbManager.py: fixed issue in breaking lock on lock
	which has already been removed

2007-12-10  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/GrampsCfg.py: Fixed bug in being able to edit the uneditable
	* src/BasicUtils/_NameDisplay.py: Renamed standard name patterns
	  to match new pattern name keywords

2007-12-10 Benny Malengier <benny.malengier@gramps-project.org>
	* src/gen/lib/notebase.py: change comment string
	* src/gen/lib/person.py: change comment string
	* src/gen/lib/event.py: add attr to list of sec objects, bug #1318

2007-12-10  Zdenek Hatas  <zdenek.hatas@gmail.com>
	* src/DateHandler/_Date_cs.py: czech datehandler added
	* src/DateHandler/__init__.py: czech datehandler included
	* src/DateHandler/Makefile.am: czech datehandler included
	* po/POTFILES.in: czech datehandler included

2007-12-09  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/GrampsCfg.py: Rearranged name display preference settings
	* src/BasicUtils/_NameDisplay.py: allow title-case name patterns

2007-12-09 Benny Malengier <benny.malengier@gramps-project.org>
	* src/gen/db/dbdir.py: always use db.DB_RECOVER

2007-12-09 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Use Narrated word

2007-12-09  Alex Roitman  <shura@gramps-project.org>
	* data/grampsxml.rng: Add namemaps and mediapath.
	* data/grampsxml.dtd: Add namemaps and mediapath.

2007-12-09 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Selectors/_SelectRepository.py: handle column changed, bug #1427

2007-12-09  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/CalculateEstimatedDates.py: define set_title
	* src/plugins/OwnerEditor.py: define build_menu_names
	* src/PluginUtils/_PluginWindows.py: Fixed layer window issues

2007-12-09 Benny Malengier <benny.malengier@gramps-project.org>
	* src/gen/db/dbdir.py: rebuild ref map correctly, bug #1421
